# coding-portfolio

./: .gitignore  README.md
EEG pipeline/: README.md
EEG pipeline/src/: EEGFeatures.py  demonstration.ipynb  requirements.txt  windexEEG.py
Image Processing/C++/: CMakeLists.txt  README.md
Image Processing/C++/examples/: demo.cpp
Image Processing/C++/src/: main.cpp
Image Processing/C++/src/algorithms/helpers/: applyNeighborhoodOperator.hpp  convolution.hpp  createSeedMap.hpp  doubleThreshold.hpp  downsample.hpp  gradientDirection.hpp  gradientMagnitude.hpp  histogram.hpp  hysteresis.hpp  nonMaxSuppression.hpp  otsu.hpp
Image Processing/C++/src/algorithms/kernelOperations/: boxBlur.hpp  closing.hpp  dilation.hpp  erosion.hpp  gaussianBlur.hpp  laplacian.hpp  medianFilter.hpp  morphologicalGradient.hpp  opening.hpp  prewitt.hpp  scharr.hpp  sobel.hpp  zeroCrossing.hpp
Image Processing/C++/src/algorithms/pipeline/: canny.hpp  dogPyramid.hpp  edgeResponseElimination.hpp  gaussianPyramid.hpp  harris.hpp  laplacianOfGaussian.hpp  siftDescriptor.hpp  siftDogPyramid.hpp  siftExtremaDetection.hpp  siftGaussianPyramid.hpp  siftOrientation.hpp
Image Processing/C++/src/algorithms/pixelOperations/: CLAHE.hpp  binaryThresholding.hpp  contrast.hpp  gammaCorrection.hpp  grayscale.hpp  histogramEqualisation.hpp  linearBrightness.hpp  thresholding.hpp
Image Processing/C++/src/image/: image.cpp  image.hpp  pixel_traits.hpp
